move the next and score out of the canvas

--- a/web/index.html
+++ b/web/index.html
@@ -23,6 +23,13 @@
 </div>
 <div id="game" class="hidden">
   <canvas id="screen"></canvas>
+  <div id="next">
+  <span>Next</span>
+  <img id="gameNext"></img>
+  </div>
+  <div id="score">
+  <span id="gameScore"></span>
+  <span>Score</span></div>
 </div>
 
 <script type="application/dart" src="main.dart"></script>
